--- a/Common/Components/Card.razor.css
+++ b/Common/Components/Card.razor.css
@@ -1,32 +1,48 @@
-﻿.common__card {
-    display: flex;
-    flex-direction: column;
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 0.125rem 0.25rem 0.125rem var(--shade-dark);
-    color: var(--gray-dark);
-    text-align: center;
-    align-items: center;
-    padding-bottom: 0.5rem;
-    width: 15rem;
+﻿.common__card, .common__card > div {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  text-align: center;
+  align-items: center;
 }
+
 .common__card {
-    & .common__paragraph {
-        margin-top: 0.5rem;
-        margin-bottom: 0.25rem;
-    }
+  border-radius: 1rem;
+  box-shadow: 0 0.125rem 0.25rem 0.125rem var(--shade-dark);
+  color: var(--gray-dark);
+  padding-bottom: 0.5rem;
+  width: 15rem;
 }
 
-.common__card.top {
-    & .common__image {
-        border-start-start-radius: inherit;
-        border-start-end-radius: inherit;
-    }
+.common__card > div {
+  width: inherit;
+  min-height: 10rem;
+  max-height: 12rem;
+  overflow: hidden;
 }
 
-.common__card.bottom {
-    & .common__image {
-        border-end-start-radius: inherit;
-        border-end-end-radius: inherit;
-    }
+.common__card.top > div {
+  border-start-start-radius: inherit;
+  border-start-end-radius: inherit;
+}
+
+.common__card.bottom > div {
+  border-end-start-radius: inherit;
+  border-end-end-radius: inherit;
+}
+
+.common__card {
+  & .common__paragraph {
+    margin-top: 0.5rem;
+    margin-bottom: 0.25rem;
+  }
+}
+
+.common__card {
+  & > div .common__image {
+    height: auto;
+    position: relative;
+    top: 50%;
+    transform: translate(0,-50%)
+  }
 }
