--- a/Common/Components/Paragraph.razor
+++ b/Common/Components/Paragraph.razor
@@ -1,6 +1,8 @@
 ﻿@inherits BaseComponent
 
-@{ _ = _builder.Append("common__paragraph"); }
+@{
+    _ = _builder.Append("common__paragraph"); 
+}
 
 <p class=@_builder>
     @ChildContent
