--- a/Common/Components/Operations/CoreOp.razor
+++ b/Common/Components/Operations/CoreOp.razor
@@ -1,4 +1,4 @@
-﻿@using Common.Models.Uris
+﻿@using Common.Models
 @using Microsoft.AspNetCore.Components.Web
 @inherits BaseComponent
 @inject NavigationManager NavigationManager
