--- a/ABM.Paie.Formation/Pages/Home.razor
+++ b/ABM.Paie.Formation/Pages/Home.razor
@@ -7,32 +7,49 @@
 @using Common.Components.Operations
 @using Common.Components.Templates
 @using Common.Extensions
-@using Common.Models.Uris
+@using Common.Models
 @inject IUriProvider UriProvider
 
 <PageTitle>ABM Paie</PageTitle>
 
+@{
+    var quotes = Quotes.GetAll().ToRandomizedList();
+}
+
 <div class="flex-center column">
 
-    @{
-        var quotes = Quotes.GetAll().ToRandomizedList(); 
-    }
+    <h1>Faire découvrir, progresser et se perfectionner</h1>
 
-    <Carousel Templates=quotes Class="quote full-width">
+    <Paragraph Class="mb-5">
+        Mon objectif est de faire monter en compétence vos gestionnaires de paie sur les domaines de la paie et de la DNS
+        via le logiciel MySilae.
+    </Paragraph>
+
+    <Carousel Templates=quotes[0..6] Class="quote full-width">
         <QuoteTemplate Model=context />
     </Carousel>
-    
-    <h1>Partenariats</h1>
-    
+
+    <h1>Actualités</h1>
+
     @{
-        var partenariats = new (ImageUriModel Model, string Class)[]
+        var actualites = new (UriModel Model, string Class)[]
         {
-            new(UriProvider.Get<ImageUriModel>(AbmUri.Facilae), "facilae"),
-            new(UriProvider.Get<ImageUriModel>(AbmUri.Prismatik), "prismatik"),
+            new(UriProvider.Get(AbmUri.Facilae), "facilae"),
+            new(UriProvider.Get(AbmUri.Prismatik), "prismatik"),
         };
     }
     
-    <Carousel Templates=partenariats.ToRandomizedList() Batch=3>
+    <h1 id="partenariats">Partenariats</h1>
+    
+    @{
+        var partenariats = new (UriModel Model, string Class)[]
+        {
+            new(UriProvider.Get(AbmUri.Facilae), "facilae"),
+            new(UriProvider.Get(AbmUri.Prismatik), "prismatik"),
+        };
+    }
+    
+    <Carousel Class="mb-5" Templates=partenariats.ToRandomizedList() Batch=3>
         <Card Class="mx-2">
             <Illustration>
                 <ImageTemplate Model=context.Model.Image />
