--- a/Common/Components/Operations/Operation.razor
+++ b/Common/Components/Operations/Operation.razor
@@ -1,7 +1,7 @@
 ﻿@using Common.Components.Templates
 @using Common.Enumerations
+@using Common.Models
 @using Common.Models.Operations
-@using Common.Models.Uris
 
 @if (Model.Uri.IsExternal) Model.Activator.EndIcon = IconPath.OpenInNew;
 
@@ -12,17 +12,17 @@
     }
     else
     {
-        if (Model.Uri is ImageUriModel imageUri)
+        if (Model.Uri.Image is ImageModel image)
         {
             <Activator Model=Model.Activator>
-                <ImageTemplate Class="inline" Model=imageUri.Image />
+                <ImageTemplate Class="inline" Model=image />
             </Activator>
         }
         else
         {
-            if (Model.Uri is DescriptionUriModel descriptionUri && !string.IsNullOrWhiteSpace(descriptionUri.Description))
+            if (Model.Uri.Description is string description && !string.IsNullOrWhiteSpace(description))
             {
-                <span>@descriptionUri.Description</span>
+                <span>@description</span>
             }
             <Activator Model=Model.Activator>
                 @Model.Uri.Content
