--- a/ABM.Paie.Formation/Pages/Contact.razor
+++ b/ABM.Paie.Formation/Pages/Contact.razor
@@ -4,11 +4,12 @@
 @using Common.Components
 @using Common.Components.Operations
 @using Common.Enumerations
+@using Common.Models
 @inject IUriProvider UriProvider
 
-<h1>Contact</h1>
+<Section Model=@UriProvider.Get(AbmUri.Contact) />
 
-<h2 id="reserver">Réserver un créneau horaire</h2>
+<Section Model=@UriProvider.Get(AbmUri.Reserver) Level=SectionLevel.H2 />
 
 <Paragraph>
     Afin d'organiser au mieux mes journées de travail entre formation et ingénierie de formation, 
@@ -17,7 +18,7 @@
     <Operation Model=@new(UriProvider.Get(AbmUri.RendezVous), new(IconPath.CalendarMonth, "primary")) /> @* TODO *@
 </Paragraph>
 
-<h2 id="coordonnees">Coordonnées</h2>
+<Section Model=@UriProvider.Get(AbmUri.Coordonnees) Level=SectionLevel.H2 />
 
 <Paragraph>
     Si je suis indisponible (en formation par exemple), veuillez me laisser vos coordonnées, de préférence par SMS avec :
@@ -57,7 +58,7 @@
     </div>
 </div>
 
-<h2 id="pages-officielles">Mes pages officielles</h2>
+<Section Model=@UriProvider.Get(AbmUri.PagesOfficielles) Level=SectionLevel.H2 />
 
 <Paragraph Class="mb-5">
     <b>Consulter mon réseau professionnel :</b>
