--- a/ABM.Paie.Formation/wwwroot/css/app.css
+++ b/ABM.Paie.Formation/wwwroot/css/app.css
@@ -106,7 +106,7 @@ code {
 /* --- --- --- --- --- */
 
 #body {
-  padding: 0.5rem;
+  padding: 0 0.5rem;
 }
 
 #footer {
@@ -140,6 +140,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
+  --fontsize: 2rem;
   font-size: 2rem;
 }
 
