--- a/Common/Components/Paragraph.razor
+++ b/Common/Components/Paragraph.razor
@@ -9,6 +9,6 @@
 </p>
 
 @code {
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
+    [Parameter, EditorRequired]
+    public RenderFragment ChildContent { get; set; }
 }
